--- a/Views/Officer/Reports.cshtml
+++ b/Views/Officer/Reports.cshtml
@@ -1,4 +1,4 @@
-<div class="full-screen-section py-5">
+<div class="full-screen-section py-5 mb-5">
     <div class="container-fluid d-flex flex-column gap-4 py-5 mt-5 mb-5">
         <div class="container  d-flex gap-3 justify-content-center align-items-center fs-4">
             <div class="d-flex gap-2">
@@ -23,7 +23,7 @@
 
         <div class="container-fluid d-flex justify-content-center">
             <div class="row w-100  justify-content-between">
-                <div class="col-md-2  p-0">
+                <div class="col-md-2 p-0">
                     <div class="custom-card count-card flex-column py-5 bg-primary text-white fs-3"
                         style="cursor:pointer">
                         <span class="d-flex gap-2 justify-content-between">
@@ -53,11 +53,12 @@
                         <p class="value fs-2 fw-bold  d-flex justify-content-center" id="pending">20</p>
                     </div>
                 </div>
-                <div class="col-md-2 p-0">
-                    <div class="custom-card count-card flex-column fs-3 py-5 bg-info text-white" style="cursor:pointer">
+                <div class="col-md-2 p-0 width-25">
+                    <div class="custom-card count-card flex-column fs-3 py-5 bg-info text-white h-100"
+                        style="cursor:pointer">
                         <span class="d-flex gap-1 justify-content-between">
                             <p class="icon"><i class="fa-solid fa-hourglass-half"></i></p>
-                            <p class="text fs-4">Pending With Citizen</p>
+                            <p class="text">Pending With Citizen</p>
                         </span>
                         <p class="value fs-2 fw-bold d-flex justify-content-center" id="pendingWithCitizen">20</p>
                     </div>
