--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -3,7 +3,8 @@
     ViewData["Title"] = "Admin Dashboard";
 }
 
-<div class="container-fluid d-flex flex-column gap-5 py-4">
+
+<div class="container-fluid d-flex flex-column gap-5 py-4" id="dashboard">
 
     <div class="row w-100 mx-auto">
         <div class="col-sm-4">
@@ -27,9 +28,9 @@
     </div>
 
     <div class="container-fluid d-flex justify-content-center">
-        <div class="row w-100 justify-content-between">
-            <div class="col-md-2">
-                <div class="custom-card count-card flex-column py-5 bg-primary text-white fs-3">
+        <div class="row w-100  justify-content-between">
+            <div class="col-md-2  p-0">
+                <div class="custom-card count-card flex-column py-5 bg-primary text-white fs-3" style="cursor:pointer">
                     <span class="d-flex gap-2 justify-content-between">
                         <p class="icon"><i class="fa-solid fa-file-pen"></i></p>
                         <p class="text">Total</p>
@@ -37,8 +38,8 @@
                     <p class="value fs-2 fw-bold d-flex justify-content-center" id="total">20</p>
                 </div>
             </div>
-            <div class="col-md-2 ">
-                <div class="custom-card count-card flex-column py-5 bg-success text-white fs-3">
+            <div class="col-md-2 p-0 ">
+                <div class="custom-card count-card flex-column py-5 bg-success text-white fs-3" style="cursor:pointer">
                     <span class="d-flex gap-2 justify-content-between">
                         <p class="icon"><i class="fa-solid fa-flag-checkered"></i></p>
                         <p class="text">Sanctioned</p>
@@ -46,8 +47,8 @@
                     <p class="value fs-2 fw-bold d-flex justify-content-center" id="sanction">20</p>
                 </div>
             </div>
-            <div class="col-md-2">
-                <div class="custom-card count-card flex-column fs-3 py-5 bg-warning text-dark">
+            <div class="col-md-2 p-0">
+                <div class="custom-card count-card flex-column fs-3 py-5 bg-warning text-dark" style="cursor:pointer">
                     <span class="d-flex gap-2 justify-content-between">
                         <p class="icon"><i class="fa-solid fa-hourglass-half"></i></p>
                         <p class="text">Pending</p>
@@ -55,17 +56,18 @@
                     <p class="value fs-2 fw-bold  d-flex justify-content-center" id="pending">20</p>
                 </div>
             </div>
-            <div class="col-md-2">
-                <div class="custom-card count-card flex-column fs-3 py-5 bg-info text-white">
-                    <span class="d-flex gap-2 justify-content-between">
+            <div class="col-md-2 p-0 width-25">
+                <div class="custom-card count-card flex-column fs-3 py-5 bg-info text-white h-100"
+                    style="cursor:pointer">
+                    <span class="d-flex gap-1 justify-content-between">
                         <p class="icon"><i class="fa-solid fa-hourglass-half"></i></p>
-                        <p class="text">With Citizen</p>
+                        <p class="text fs-3">Pending With Citizen</p>
                     </span>
-                    <p class="value fs-2 fw-bold  d-flex justify-content-center" id="pendingWithCitizen">20</p>
+                    <p class="value fs-2 fw-bold d-flex justify-content-center p-0 m-0" id="pendingWithCitizen">20</p>
                 </div>
             </div>
-            <div class="col-md-2">
-                <div class="custom-card count-card flex-column fs-3 py-5 bg-danger text-white">
+            <div class="col-md-2 p-0">
+                <div class="custom-card count-card flex-column fs-3 py-5 bg-danger text-white" style="cursor:pointer">
                     <span class="d-flex gap-2 justify-content-between">
                         <p class="icon"><i class="fa-solid fa-ban"></i></p>
                         <p class="text">Rejected</p>
@@ -78,54 +80,54 @@
 
     <div class="row w-100">
         <div class="col-md-4 offset-md-2">
-            <div class="custom-card flex-column bg-white text-dark">
-                <canvas id="myChart" height="500" width="500"></canvas>
-            </div>
-            <div class="custom-card d-flex flex-column mt-2">
+            <div class="custom-card d-flex flex-column mb-2" style="height: 10vh;">
                 <div class="d-flex gap-3">
-                    <p>District: <span class="fw-bold" id="chartDistrict"></span></p>
+                    <p>District: <span class="fw-bold" id="chartDistirct"></span></p>
                     <p>Officer: <span class="fw-bold" id="chartOfficer">All</span></p>
                 </div>
                 <p>Service: <span class="fw-bold" id="chartService">All</span></p>
             </div>
+            <div class="custom-card flex-column bg-white text-dark">
+                <canvas id="myChart" height="500" width="500"></canvas>
+            </div>
         </div>
 
         <div class="col-md-4">
+            <div class="custom-card d-flex flex-column mb-2" style="height: 10vh;">
+                <p class="fw-bold">All District Data</p>
+            </div>
             <div class="custom-card flex-column">
                 <canvas id="allDistrict" height="500" width="500"></canvas>
             </div>
-            <p class="custom-card text-center fw-bold mt-2">All District Data</p>
+        </div>
+    </div>
+
+    <div class="container-fluid d-none flex-column gap-5 py-5 mb-5" id="dataGrid">
+        <div class="d-flex gap-2">
+            <button class="btn btn-success" onclick="printDiv('printableArea')">Print</button>
+        </div>
+        <div id="printableArea">
+            <table class="table table-responsive table-bordered table-striped">
+                <thead class="bg-dark text-white">
+                    <th>S.No.</th>
+                    <th>Application Number</th>
+                    <th>Applicant Name</th>
+                    <th>Application Status</th>
+                    <th>Applied District</th>
+                    <th>Applied Service</th>
+                    <th>Application Currently With Officer</th>
+                </thead>
+                <tbody id="applicationListContainer">
+
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
 
 
-<div class="modal fade" id="applicationList" tabindex="-1" aria-labelledby="applicationListLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-        <div class="modal-content w-100">
-            <div class="modal-header bg-dark text-white">
-                <h1 class="modal-title fs-5" id="applicationListLabel">Application List</h1>
-            </div>
-            <div class="modal-body">
-                <div class="container-fluid">
-                    <table class="table table-responsive table-bordered table-striped">
-                        <thead class="bg-dark text-white">
-                            <th>Application Number</th>
-                            <th>Applicant Name</th>
-                            <th>Application Status</th>
-                        </thead>
-                        <tbody id="applicationListContainer">
 
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="modal-footer bg-dark" id="statusButtons">
-                <button type="button" class="btn btn-light" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
+
 
 
 
