--- a/Views/Shared/Sidebar.cshtml
+++ b/Views/Shared/Sidebar.cshtml
@@ -37,10 +37,17 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/Admin/Reports">
+                <a class="nav-link dropdown-caret" href="#reportsMenu" data-bs-toggle="collapse" role="button"
+                    aria-expanded="false" aria-controls="reportsMenu">
                     <i class="fa-solid fa-sliders"></i>
                     REPORTS
                 </a>
+                <div class="collapse" id="reportsMenu">
+                    <ul class="navbar-nav ms-5">
+                        <li class="nav-item"><a class="nav-link" href="/Admin/Reports/Individual">Individual</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/Admin/Reports/History">History</a></li>
+                    </ul>
+                </div>
             </li>
         </ul>
     </div>
