Recovering from damage

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
             <path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path>
         </svg>
     </div>
-    <div class="full-screen-section center-align sm-height-auto background-primary position-relative">
+    <div class="full-screen-section center-align sm-height-auto background-primary position-relative" style="margin-top: 0px;">
         <div class="container center-align" id="projectsLaunched">
             <div class="row center-align w-75">
                 <div class="col-sm-12">
@@ -72,7 +72,7 @@
             <path d="M144.54,17.34H0V0H144.54ZM0,0S32.36,17.34,72.27,17.34,144.54,0,144.54,0"></path>
         </svg>
     </div>
-    <div class="full-screen-section center-align px-2" id="contactForm">
+    <div class="full-screen-section center-align px-2"  id="contactForm">
         <div class="container border shadow-lg mt-5" style="border-radius: 15px;overflow: hidden;">
             <div class="row position-relative" style="height: 70vh;">
                 <div class="col-sm-6 center-align flex-column">
