Recovery almost complete

--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -29,49 +29,44 @@
 
     <div class="container-fluid d-flex justify-content-center">
         <div class="row w-100  justify-content-between">
-            <div class="col-md-2  p-0">
-                <div class="custom-card count-card flex-column py-5 bg-primary text-white fs-3" style="cursor:pointer">
-                    <span class="d-flex gap-2 justify-content-between">
-                        <p class="icon"><i class="fa-solid fa-file-pen"></i></p>
-                        <p class="text">Total</p>
-                    </span>
+            <div class="col-md-2 p-0 mt-2">
+                <div class="custom-card count-card flex-column py-5 bg-primary text-white fs-3 gap-0"
+                    style="cursor:pointer">
+                    <i class="fa-solid fa-file-pen"></i>
+                    <span class="text">Total</span>
                     <p class="value fs-2 fw-bold d-flex justify-content-center" id="total">20</p>
                 </div>
             </div>
-            <div class="col-md-2 p-0 ">
-                <div class="custom-card count-card flex-column py-5 bg-success text-white fs-3" style="cursor:pointer">
-                    <span class="d-flex gap-2 justify-content-between">
-                        <p class="icon"><i class="fa-solid fa-flag-checkered"></i></p>
-                        <p class="text">Sanctioned</p>
-                    </span>
+            <div class="col-md-2 p-0 mt-2 ">
+                <div class="custom-card count-card flex-column py-5 bg-success text-white fs-3 gap-0"
+                    style="cursor:pointer">
+                    <i class="fa-solid fa-flag-checkered"></i>
+                    <span class="text">Sanctioned</span>
                     <p class="value fs-2 fw-bold d-flex justify-content-center" id="sanction">20</p>
                 </div>
             </div>
-            <div class="col-md-2 p-0">
-                <div class="custom-card count-card flex-column fs-3 py-5 bg-warning text-dark" style="cursor:pointer">
-                    <span class="d-flex gap-2 justify-content-between">
-                        <p class="icon"><i class="fa-solid fa-hourglass-half"></i></p>
-                        <p class="text">Pending</p>
-                    </span>
+            <div class="col-md-2 p-0 mt-2">
+                <div class="custom-card count-card flex-column fs-3 py-5 bg-warning text-dark gap-0"
+                    style="cursor:pointer">
+                    <i class="fa-solid fa-hourglass-half"></i>
+                    <span class="text">Pending</span>
                     <p class="value fs-2 fw-bold  d-flex justify-content-center" id="pending">20</p>
                 </div>
             </div>
-            <div class="col-md-2 p-0 width-25">
-                <div class="custom-card count-card flex-column fs-3 py-5 bg-info text-white h-100"
+            <div class="col-md-2 p-0 mt-2">
+                <div class="custom-card count-card flex-column fs-3 py-4 bg-info text-white gap-2"
                     style="cursor:pointer">
-                    <span class="d-flex gap-1 justify-content-between">
-                        <p class="icon"><i class="fa-solid fa-hourglass-half"></i></p>
-                        <p class="text fs-3">Pending With Citizen</p>
-                    </span>
-                    <p class="value fs-2 fw-bold d-flex justify-content-center p-0 m-0" id="pendingWithCitizen">20</p>
+                    <i class="fa-solid fa-user-clock"></i>
+                    <span class="fs-5">Pending With Citizen</span>
+                    <span class="fs-4">For Editing</span>
+                    <p class="value fs-2 fw-bold d-flex justify-content-center" id="pendingWithCitizen">20</p>
                 </div>
             </div>
-            <div class="col-md-2 p-0">
-                <div class="custom-card count-card flex-column fs-3 py-5 bg-danger text-white" style="cursor:pointer">
-                    <span class="d-flex gap-2 justify-content-between">
-                        <p class="icon"><i class="fa-solid fa-ban"></i></p>
-                        <p class="text">Rejected</p>
-                    </span>
+            <div class="col-md-2 p-0 mt-2">
+                <div class="custom-card count-card flex-column fs-3 py-5 bg-danger text-white gap-0"
+                    style="cursor:pointer">
+                    <i class="fa-solid fa-ban"></i>
+                    <span class="text">Rejected</span>
                     <p class="value fs-2 fw-bold  d-flex justify-content-center" id="rejected">20</p>
                 </div>
             </div>
