--- a/Views/Admin/Individual.cshtml
+++ b/Views/Admin/Individual.cshtml
@@ -4,6 +4,8 @@
 }
 
 <div class="container-fluid center-align flex-column p-5" style="max-height: 100vh;overflow-y: auto;">
+    <p class="fs-4 text-center">Get Application Flow</p>
+
     <input class="form-control width-50 d-flex mx-auto" type="text" name="applicationId" id="applicationId"
         placeholder="Application Id">
 
