--- a/Views/Shared/AdminNavbar.cshtml
+++ b/Views/Shared/AdminNavbar.cshtml
@@ -1,7 +1,5 @@
-<nav class="navbar navbar-expand-lg flex-column fixed-top  z-0 position-absolute w-100">
-    <div class="container-fluid d-flex justify-content-end">
-        <button id="dashboardToggler" class="btn btn-dark" style="display: none;">
-            <i class="fa-solid fa-ellipsis-vertical"></i>
-        </button>
+<nav class="navbar navbar-expand-lg border-bottom">
+    <div class="container-fluid">
+        <p class="text-center fw-bold fs-1 w-100">SocialWelfare Department</p>
     </div>
 </nav>
