Table Utilities added to Service List Applications List

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
     <script src="~/js/menu.js" asp-append-version="true"></script>
     <script src="~/js/navbar.js" asp-append-version="true"></script>
     <script src="~/js/captcha.js" asp-append-version="true"></script>
+    <script src="~/js/tableUtilities.js" asp-append-version="true"></script>
 
 
     @await RenderSectionAsync("Scripts", required: false)
