--- a/Views/User/ApplicationStatus.cshtml
+++ b/Views/User/ApplicationStatus.cshtml
@@ -1,6 +1,6 @@
 <div class="full-screen-section center-align flex-column">
     <div class="container">
-        <table class="table table-striped table-hover table-bordered">
+        <table class="table table-striped table-hover table-bordered" id="statusTable">
             <thead class="bg-dark text-white">
                 <tr>
                     <th scope="col">#</th>
