--- a/Views/User/IncompleteApplications.cshtml
+++ b/Views/User/IncompleteApplications.cshtml
@@ -1,6 +1,6 @@
 <div class="full-screen-section center-align flex-column">
     <div class="container">
-        <table class="table table-striped table-hover table-bordered" style="border-radius:10px;overflow:hidden;">
+        <table class="table table-striped table-hover table-bordered" style="overflow:hidden;" id="statusTable">
             <thead class="bg-dark text-white">
                 <tr>
                     <th scope="col">#</th>
@@ -51,5 +51,4 @@
 <script>
     const applications = @Html.Raw(Json.Serialize(Model));
 </script>
-<script src="/js/pagination.js"></script>
 <script src="/js/User/applicationStatus.js"></script>
