--- a/Views/User/ServicesList.cshtml
+++ b/Views/User/ServicesList.cshtml
@@ -1,6 +1,6 @@
 <div class="full-screen-section center-align flex-column">
     <div class="container">
-        <table class="table table-striped table-hover rounded-0">
+        <table class="table table-striped table-hover rounded-0" id="serviceList">
             <thead class="bg-dark text-white">
                 <tr>
                     <th scope="col">#</th>
@@ -20,4 +20,4 @@
 </script>
 
 <script src="/js/User/serviceList.js"></script>
-<script src="/js/pagination.js"></script>
+@* <script src="/js/pagination.js"></script> *@
